login working + checkout changes

--- a/src/Login.css
+++ b/src/Login.css
@@ -52,6 +52,7 @@
   border: 1px solid;
   margin-top: 10px;
   border-color: #a88734, #9c7e31, #846a29;
+  cursor: pointer;
 }
 
 .btn_register {
@@ -61,4 +62,5 @@
   border: 1px solid;
   margin-top: 10px;
   border-color: darkgray;
+  cursor: pointer;
 }
